<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FBFF"
    tools:context=".PermissionAndInfoActivity">

    <TextView
        android:id="@+id/txtCovidKawachTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/kawachTitle"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/the_app_needs_following_permission_for_effective_working"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCovidKawachTitle" />

    <TextView
        android:id="@+id/infoBluetoothTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/bluetooth"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo1" />

    <TextView
        android:id="@+id/infoBluetoothDetail"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:text="@string/bluetooth_tells_you_who_is_near_you_and_can_help_detect_covid_19_patients_nearby"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBluetoothTitle" />

    <Switch
        android:id="@+id/BluetoothSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo1" />

    <TextView
        android:id="@+id/infoLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBluetoothDetail" />

    <TextView
        android:id="@+id/infoLocationDetail"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:text="@string/location_helps_in_telling_you_more_about_your_surrounding"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLocationTitle" />

    <Switch
        android:id="@+id/LocationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BluetoothSwitch" />

    <CheckBox
        android:id="@+id/checkboxAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHighlight="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="365dp"
        android:layout_height="53dp"
        android:layout_marginBottom="40dp"
        android:text="@string/agree_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTC"
        android:layout_width="275dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/i_agree_to_the_share_my_data_as_per_t_c"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintStart_toEndOf="@+id/checkboxAgree" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/txtTC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="388dp"
        android:layout_height="14dp"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCovidKawachTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>