<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FBFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtSplashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#D8FBFF"
        android:text="@string/kawachTitle"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageViewKawachLogo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logokavach" />

    <TextView
        android:id="@+id/txtMadeInIndia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_in_sigmahacks_2_0"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSplashTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/heart"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtMadeInIndia"
        app:layout_constraintTop_toBottomOf="@+id/txtSplashTitle" />

    <ProgressBar
        android:id="@+id/progressBarloading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="130dp"
        android:layout_height="16dp"
        android:layout_marginTop="100dp"
        android:progress="0"
        android:progressBackgroundTint="#000000"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageViewKawachLogo"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageViewKawachLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKawachLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>
