<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FBFF"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toTopOf="@+id/errorText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSendVerificationCode"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/request_verificaton_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextphone" />

    <EditText
        android:id="@+id/editTextOTP"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColor="@android:color/black"
        android:textColorHint="#8C8C8C"
        app:layout_constraintBottom_toTopOf="@+id/btnVerify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextcountrycode"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/_91"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/value91"
        android:textColor="@android:color/black"
        android:textColorHint="#8C8C8C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextphone"
        android:layout_width="196dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="#8C8C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/editTextcountrycode"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtCovidKawachTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/kawachTitle"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btnSendVerificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnSendVerificationCode"
        app:layout_constraintTop_toTopOf="@+id/btnSendVerificationCode"
        app:layout_constraintVertical_bias="0.6"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnVerify"
        app:layout_constraintStart_toEndOf="@+id/btnVerify"
        app:layout_constraintTop_toTopOf="@+id/btnVerify" />

    <TextView
        android:id="@+id/errorText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendVerificationCode" />

    <TextView
        android:id="@+id/errorText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCovidKawachTitle"
        app:srcCompat="@drawable/logokavach" />

</androidx.constraintlayout.widget.ConstraintLayout>